# Optical-Flow

./: .gitignore  CMakeLists.txt
IO_API/: _FileHandler.cpp  _FileHandler.h  fullX  module_input.cpp  module_input.h  test  testdata.csv  unit_test.cpp  unit_test_FH.cpp
configuration/: config.txt
main/: OpticalFlowCalc.cpp  OpticalFlowCalc.h  _FileHandler.cpp  _FileHandler.h  _analysis.cpp  _analysis.h  _init.cpp  _init.h  analysis.cpp  analysis.h  fullBuild  main.cpp  makefile
main/Optical_Flow_Output/: OpticalFlowData_Output.csv
main/configuration/: config.txt
main/deprecated/: OpticalFlowCalc.cpp  OpticalFlowCalc.h
main/fullBuild.dSYM/Contents/: Info.plist
main/fullBuild.dSYM/Contents/Resources/DWARF/: fullBuild
test/: build.txt  build_test.cpp  file_parse.cpp  fullBuild  output  test3.cpp  test4.cpp  testB
test/configuration/: config.txt
